1.3 beta 2
- Improved working with more than one editor per track
- Add a Welcome screen instead of quitting when last tab is closed
- Fixed pressing shift+number in guitar editor in Cocoa
- use sheet dialogs on OSX
- Fixed some placement issues with silences in printed scores
- Minor fixes in new OSX player code
- Improved note beaming in score editor when using multiple time signatures
- Improved the pause feature to not affect the song start measure
- Other bug fixes and minor improvements
- Show which sequences have unsaved changes

1.3 beta 1
- Intensive code refactoring and cleanup
- Support sending midi output to external devices
- Improve rendering of short notes in tablature view
- Improve selection to preview which notes are included
- Auto-extend song length when moving notes past end
- Support for importing lyrics events (not yet for editing them)
- Performance (fluidity/responsivity) improvements
- Fixed glitches in software rendering mode
- Fixed crash when trying to print a song containing an empty track
- Grey out irrelevant fields in note select dialog
- Migrate OSX player to Aria generic sequencer, like on other systems
- wxWidgets 2.9 builds will now feature nicer symbols on printed scores
- Improve tool picker

===================================================================================================

1.2.4.1
- Fixed crash when using track backgrounds

1.2.4
- Fixed song length when importing MIDIs with multiple time signatures
- Added support for horizontal mouse wheel scrolling (wxWidgets 2.9.1+ only)
- Fixed rare bug that could cause tracks to have an incorrect instrument name when importing a MIDI
- Provide graphical warnings when a MIDI file cannot be perfectly loaded
- Fixed rare printing crash
- Fixed problems with silences when printing scores with uneven chords
- Fixed not staying centered when zooming with ctrl+mouse wheel
- Fixed "rearrange notes" feature in tablature editor, which had accidentally been disabled